--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "profilepic.jpeg"
+  name             : "Zain Ul Abidin Jillani"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Lahore"
+  employer         : "FAST NUCES Lahore"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "Zain.tap@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
