About Me Changes and CV upload

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profilepic.jpeg"
   name             : "Zain Ul Abidin Jillani"
   pronouns         : # example: "she/her"  
-  bio              : "Bachelors in Computer Science Student at FAST NUCES Lahore"
+  bio              : "Bachelors in Computer Science Student at the National University of Computer and Emerging Sciences"
   location         : "Lahore, Pakistan"
   employer         : "FAST NUCES Lahore"
   uri              : # URL
